# ppi

./: README.md  main.py  pyproject.toml  requirements.txt
config/retailers/: retailers.yaml
input/: targets.csv
output/: results.csv
output/debug/: ksp_last.html
research/: reading_list.md
research/notes/: problem_definition.md
research/papers/: TEMPLATE.md
src/ppi/: __init__.py  config.py  io.py  runner.py  selectors.py  targets.py
src/ppi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config_extract.py  test_config_io_targets_extra.py  test_interactive_docs.py  test_main.py  test_runner.py  test_runner_extra.py  test_runner_extract.py  test_selectors.py  test_simple.py
tools/interactive_docs/: README.md  app.py  build_index.py
