[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ppi"
version = "0.1.0"
description = "Price pipeline inspector"
requires-python = ">=3.10"
dependencies = [
  "patchright",
  "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
